--- a/embed-sdk/Cargo.toml
+++ b/embed-sdk/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-common = { package = "client-sdk-rs-common", path = "../../client-sdk-rs/common" }
+common = { package = "client-sdk-common", git = "https://github.com/Lantern-chat/client-sdk-rs" }
 
 serde = { version = "1.0.163", features = ["derive"] }
 smol_str = { version = "0.2.0", features = ["serde"] }
