--- a/embed-sdk/Cargo.toml
+++ b/embed-sdk/Cargo.toml
@@ -14,6 +14,10 @@ smol_str = { version = "0.2.0", features = ["serde"] }
 timestamp = { package = "iso8601-timestamp", version = "0.2" }
 serde_shims = { version = "0.2", features = ["bitflags"] }
 
+postgres-types = { version = "0.2.1", optional = true }
+bytes = { version = "1", optional = true }
+rusqlite = { version = "0.29.0", optional = true }
+
 schemars = { version = "0.8.12", optional = true }
 thin-vec = { version = "0.2.12", optional = true, features = ["serde"] }
 typed-builder = { version = "0.14.0", optional = true }
@@ -22,3 +26,4 @@ bitflags = "1.2"
 [features]
 default = ["thin-vec"]
 schemars = ["dep:schemars", "common/schemars"]
+pg = ["postgres-types", "bytes"]
