Add the embed server

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["embed-sdk"]
+members = ["embed-sdk", "embed-server"]
 
 [patch.crates-io]
 smol_str = { git = "https://github.com/novacrazy/smol_str" }
