Add README and allow non-signed mode

--- a/embed-server/config.toml
+++ b/embed-server/config.toml
@@ -2,6 +2,7 @@
 max_redirects = 2
 timeout = 4000       # milliseconds
 resolve_media = true
+signed = false
 
 # prefixes to strip from domains before testing
 prefixes = ["www.", "www2."]
