--- a/embed-server/Cargo.toml
+++ b/embed-server/Cargo.toml
@@ -47,6 +47,7 @@ smallvec = "1.7.0"
 bitflags = "1.3.2"
 csscolorparser = { version = "0.6.2", default_features = false, features = ["named-colors"] }
 html-escape = { version = "0.2.13", default_features = false }
+feed-rs = "1.3.0"
 
 regex-build = { git = "https://github.com/Lantern-chat/regex-build" }
 [build-dependencies]
