--- a/embed-server/Cargo.toml
+++ b/embed-server/Cargo.toml
@@ -20,7 +20,7 @@ reqwest = { version = "0.11", default_features = false, features = [
 ] }
 tokio = { version = "1", features = ["full"] }
 axum = { version = "0.6", features = ["http2"] }
-tower-http = { version = "0.4", features = ["trace"] }
+tower-http = { version = "0.4", features = ["catch-panic", "trace"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
