--- a/embed-sdk/Cargo.toml
+++ b/embed-sdk/Cargo.toml
@@ -10,9 +10,9 @@ license = "MIT OR Apache 2.0"
 common = { package = "client-sdk-common", git = "https://github.com/Lantern-chat/client-sdk-rs" }
 
 serde = { version = "1.0.163", features = ["derive"] }
+rkyv = { version = "0.7", optional = true, default-features = false }
 smol_str = { version = "0.2.0", features = ["serde"] }
 timestamp = { package = "iso8601-timestamp", version = "0.2" }
-serde_shims = { version = "0.2", features = ["bitflags"] }
 
 postgres-types = { version = "0.2.1", optional = true }
 bytes = { version = "1", optional = true }
@@ -20,10 +20,11 @@ rusqlite = { version = "0.29.0", optional = true }
 
 schemars = { version = "0.8.12", optional = true }
 thin-vec = { version = "0.2.12", optional = true, features = ["serde"] }
-typed-builder = { version = "0.15.0", optional = true }
+typed-builder = { version = "0.18.0", optional = true }
 bitflags = "1.2"
 
 [features]
 default = ["thin-vec"]
 schemars = ["dep:schemars", "common/schemars"]
 pg = ["postgres-types", "bytes"]
+rkyv = ["dep:rkyv", "common/rkyv"]
