--- a/embed-server/Cargo.toml
+++ b/embed-server/Cargo.toml
@@ -11,20 +11,14 @@ authors = ["Nova <novacrazy@gmail.com>"]
 common = { package = "client-sdk-common", git = "https://github.com/Lantern-chat/client-sdk-rs" }
 embed = { package = "embed-sdk", path = "../embed-sdk" }
 
-reqwest = { version = "0.11", default_features = false, features = [
-    "rustls-tls",
-    "json",
-    "gzip",
-    "brotli",
-    "deflate",
-] }
+reqwest = { version = "0.11", default_features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }
 tokio = { version = "1", features = ["full"] }
 axum = { version = "0.6", features = ["http2"] }
 tower-http = { version = "0.4", features = ["catch-panic", "trace"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
-hashbrown = { version = "0.13", features = ["inline-more", "serde"] }
+hashbrown = { version = "0.14", features = ["inline-more", "serde"] }
 iso8601-timestamp = "0.2"
 imagesize = "0.12.0"
 base64 = "0.21"
@@ -35,11 +29,11 @@ thiserror = "1"
 dotenv = "0.15"
 futures-util = "0.3.25"
 memchr = "2.5.0"
-quick-xml = { version = "0.28", features = ["serialize"] }
+quick-xml = { version = "0.31", features = ["serialize"] }
 serde_json = "1"
 serde = { version = "1", features = ["derive", "rc"] }
 regex = "1"
-toml = "0.7"
+toml = "0.8"
 async-trait = "0.1.64"
 url = "2"
 monostate = "0.1"
@@ -47,21 +41,17 @@ smol_str = "0.2"
 heck = "0.4.1"
 mime_guess = "2.0.4"
 arc-swap = "1.6.0"
-scraper = { version = "0.16", default_features = false }
+scraper = { version = "0.18", default_features = false }
 once_cell = "1.17.1"
 ego-tree = "0.6.2"
 serde_repr = "0.1.7"
 regex-automata = { version = "0.1.10", default_features = false }
 smallvec = "1.7.0"
 bitflags = "1.3.2"
-csscolorparser = { version = "0.6.2", default_features = false, features = [
-    "named-colors",
-] }
+csscolorparser = { version = "0.6.2", default_features = false, features = ["named-colors"] }
 html-escape = { version = "0.2.13", default_features = false }
 feed-rs = "1.3.0"
 
 regex-build = { git = "https://github.com/Lantern-chat/regex-build" }
 [build-dependencies]
-regex-build = { git = "https://github.com/Lantern-chat/regex-build", features = [
-    "build",
-] }
+regex-build = { git = "https://github.com/Lantern-chat/regex-build", features = ["build"] }
