--- a/embed-sdk/Cargo.toml
+++ b/embed-sdk/Cargo.toml
@@ -8,17 +8,20 @@ license = "MIT OR Apache 2.0"
 common = { package = "client-sdk-common", git = "https://github.com/Lantern-chat/client-sdk-rs" }
 
 serde = { version = "1.0.163", features = ["derive"] }
-rkyv = { version = "0.7", optional = true, default-features = false, features = ["smol_str", "size_32"] }
+rkyv = { version = "0.7", optional = true, default-features = false, features = ["smol_str", "validation"] }
 smol_str = { version = "0.2.0", features = ["serde"] }
 timestamp = { package = "iso8601-timestamp", version = "0.2" }
 
 postgres-types = { version = "0.2.1", optional = true }
 bytes = { version = "1", optional = true }
-rusqlite = { version = "0.29.0", optional = true }
+rusqlite = { version = "0.30.0", optional = true }
 
 schemars = { version = "0.8.12", optional = true }
 typed-builder = { version = "0.18.0", optional = true }
 bitflags = "1.2"
+
+[dev-dependencies]
+rkyv = "0.7"
 
 [features]
 # default = ["rkyv"]
