--- a/embed-server/Cargo.toml
+++ b/embed-server/Cargo.toml
@@ -37,10 +37,11 @@ toml = "0.8"
 async-trait = "0.1.64"
 url = "2"
 monostate = "0.1"
+ahash = "0.8"
 smol_str = "0.2"
-heck = "0.4.1"
+heck = "0.5"
 mime_guess = "2.0.4"
-arc-swap = "1.6.0"
+arc-swap = "1.7.0"
 scraper = { version = "0.19", default_features = false }
 once_cell = "1.17.1"
 ego-tree = "0.6.2"
@@ -50,6 +51,9 @@ smallvec = "1.7.0"
 csscolorparser = { version = "0.6.2", default_features = false, features = ["named-colors"] }
 html-escape = { version = "0.2.13", default_features = false }
 feed-rs = "1.3.0"
+triomphe = "0.1"
+scc = "2"
+
 
 regex-build = { git = "https://github.com/Lantern-chat/regex-build" }
 [build-dependencies]
