--- a/embed-server/Cargo.toml
+++ b/embed-server/Cargo.toml
@@ -7,6 +7,14 @@ authors = ["Nova <novacrazy@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["cache_redis", "cache_rusqlite", "sonic_json"]
+cache_redis = ["fred"]
+cache_rusqlite = ["r2d2_sqlite", "r2d2", "blake3"]
+sonic_json = ["sonic-rs"]
+
+# cache_pg = ["cache", "tokio-postgres"]
+
 [dependencies]
 common = { package = "client-sdk-common", git = "https://github.com/Lantern-chat/client-sdk-rs" }
 embed = { package = "embed-sdk", path = "../embed-sdk" }
@@ -30,7 +38,6 @@ dotenv = "0.15"
 futures-util = "0.3.25"
 memchr = "2.5.0"
 quick-xml = { version = "0.31", features = ["serialize"] }
-serde_json = "1"
 serde = { version = "1", features = ["derive", "rc"] }
 regex = "1"
 toml = "0.8"
@@ -53,6 +60,18 @@ html-escape = { version = "0.2.13", default_features = false }
 feed-rs = "1.3.0"
 triomphe = "0.1"
 scc = "2"
+
+serde_json = "1"
+sonic-rs = { version = "0.3.6", optional = true }
+
+fred = { version = "9.0", optional = true, features = ["serde-json"] }
+
+r2d2 = { version = "0.8.0", optional = true }
+r2d2_sqlite = { version = "0.24.0", optional = true, features = ["bundled"] }
+blake3 = { version = "1.5.1", optional = true }
+
+
+# redis = { version = "0.25.3", optional = true, features = ["tokio-comp", "ahash", "connection-manager"] }
 
 
 regex-build = { git = "https://github.com/Lantern-chat/regex-build" }
