--- a/embed-server/Cargo.toml
+++ b/embed-server/Cargo.toml
@@ -3,43 +3,43 @@ name = "embed-server"
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-only"
-authors = ["Nova <novacrazy@gmail.com>"]
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["novacrazy <novacrazy@gmail.com>"]
 
 [features]
-default = ["cache_redis", "cache_rusqlite", "cache_redb", "sonic_json"]
+default = ["json-simd", "cache_redis", "cache_rusqlite", "cache_redb"]
 cache_redis = ["fred"]
 cache_rusqlite = ["r2d2_sqlite", "r2d2", "blake3"]
 cache_redb = ["redb"]
+cache_pg = ["tokio-postgres", "deadpool-postgres"]
 
-sonic_json = ["sonic-rs"]
+sonic_json = ["sonic-rs", "ftl/json-simd"]
+json-simd = ["sonic_json"]
 
 # cache_pg = ["cache", "tokio-postgres"]
 
 [dependencies]
-common = { package = "client-sdk-common", git = "https://github.com/Lantern-chat/client-sdk-rs" }
 embed = { package = "embed-sdk", path = "../embed-sdk" }
 
+ftl = { git = "https://github.com/Lantern-chat/ftl2", default-features = false, features = ["json"] }
+
 tokio = { version = "1", features = ["full"] }
-axum = { version = "0.7", features = ["http2"] }
-reqwest = { version = "0.12", default_features = false, features = ["rustls-tls", "http2", "json", "gzip", "brotli", "deflate"] }
-tower-http = { version = "0.5", features = ["catch-panic", "trace"] }
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "gzip", "brotli", "deflate"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
-hashbrown = { version = "0.14", features = ["inline-more", "serde"] }
-iso8601-timestamp = "0.2"
-imagesize = "0.12.0"
+
+bytes = "1"
+hashbrown = { version = "0.15", features = ["inline-more", "serde"] }
+imagesize = "0.13.0"
 base64 = "0.22"
 hmac = "0.12.1"
 sha1 = "0.10.5"
 hex = "0.4.3"
-thiserror = "1"
+thiserror = "2"
 dotenv = "0.15"
 futures-util = "0.3.25"
 memchr = "2.5.0"
-quick-xml = { version = "0.31", features = ["serialize"] }
+quick-xml = { version = "0.37", features = ["serialize"] }
 serde = { version = "1", features = ["derive", "rc"] }
 regex = "1"
 toml = "0.8"
@@ -47,18 +47,18 @@ async-trait = "0.1.64"
 url = "2"
 monostate = "0.1"
 ahash = "0.8"
-smol_str = "0.2"
+smol_str = "0.3"
 heck = "0.5"
 mime_guess = "2.0.4"
 arc-swap = "1.7.0"
-scraper = { version = "0.19", default_features = false }
+scraper = { version = "0.21", default-features = false }
 once_cell = "1.17.1"
-ego-tree = "0.6.2"
+ego-tree = "0.9"
 serde_repr = "0.1.7"
-regex-automata = { version = "0.1.10", default_features = false }
+regex-automata = { version = "0.1.10", default-features = false }
 smallvec = "1.7.0"
-csscolorparser = { version = "0.6.2", default_features = false, features = ["named-colors"] }
-html-escape = { version = "0.2.13", default_features = false }
+csscolorparser = { version = "0.7", default-features = false, features = ["named-colors"] }
+html-escape = { version = "0.2.13", default-features = false }
 feed-rs = "2"
 triomphe = "0.1"
 scc = "2"
@@ -66,17 +66,16 @@ scc = "2"
 serde_json = "1"
 sonic-rs = { version = "0.3.6", optional = true }
 
-fred = { version = "9.0", optional = true, features = ["serde-json"] }
+fred = { version = "10.0", optional = true, features = ["serde-json"] }
 
 r2d2 = { version = "0.8.0", optional = true }
-r2d2_sqlite = { version = "0.24.0", optional = true, features = ["bundled"] }
+r2d2_sqlite = { version = "0.25.0", optional = true, features = ["bundled"] }
 blake3 = { version = "1.5.1", optional = true }
 
 redb = { version = "2.0", optional = true }
 
 
 # redis = { version = "0.25.3", optional = true, features = ["tokio-comp", "ahash", "connection-manager"] }
-
 
 regex-build = { git = "https://github.com/Lantern-chat/regex-build" }
 [build-dependencies]
