--- a/embed-server/Cargo.toml
+++ b/embed-server/Cargo.toml
@@ -77,6 +77,7 @@ redb = { version = "2.0", optional = true }
 
 # redis = { version = "0.25.3", optional = true, features = ["tokio-comp", "ahash", "connection-manager"] }
 
+aho-corasick = "1.1.3"
 regex-build = { git = "https://github.com/Lantern-chat/regex-build" }
 [build-dependencies]
 regex-build = { git = "https://github.com/Lantern-chat/regex-build", features = ["build"] }
