--- a/embed-server/config.toml
+++ b/embed-server/config.toml
@@ -77,6 +77,11 @@ domains = [
     "ytkids.app.goo.gl",
 ]
 
+[sites.bluesky]
+color = 0x208bfe
+pattern = '''\.?bsky\.app$'''
+domains = ["bsky.app", "bsky.social", "bsky.network", "bsky.chat"]
+
 # https://www.netify.ai/resources/applications/twitter
 [sites.twitter]
 color = 0x1DA1F2
