Improve mime guessing

--- a/embed-sdk/Cargo.toml
+++ b/embed-sdk/Cargo.toml
@@ -21,3 +21,4 @@ typed_builder = ["client-sdk/typed-builder"]
 bon = ["client-sdk/bon"]
 pg = ["client-sdk/pg"]
 rusqlite = ["client-sdk/rusqlite"]
+mime_guess = ["client-sdk/mime_guess"]
